version 1.6.2, in progress
- Add Poisson distribution to p-value finder
- Fix breakage in GUI "graph page" apparatus
- Bivariate scatterplots: give the option of showing various sorts
  of fitted line: linear, quadratic, inverse or loess
- Monochrome EMF graphs: make sure point types are distinct for
  different series
- Internal clean-up of the graphing code
- Make frequency plots more configurable via the GUI
- Fix memory leaks in GUI graph editor dialog
- Bugfix: estimating models inside nested functions could cause
  a crash
- Session icon window: don't display temporary matrices,
  generated within functions
- Icon window: fix display on one-character object names
- Fix memory leak when generating some sorts of matrices
- Add option of using Parzen kernel (the default is Bartlett)
  when computing HAC covariance matrix
- Update the API documentation (still very much incomplete)
- Update gnuplot to version 4.2.0 in the Windows installer    

2/26/2007 version 1.6.1
- Revamp for internal "genr" mechanism plus some user-visible
  changes to genr
- Make the "delete" command do what the manual says
- Doing "Edit attributes" on a newly generated variable: you
  can edit the formula and hence change the content of the variable
- Displaying table of summary statistics for multiple variables:
  allow slightly longer variable names before falling back from
  combined tabular format to individual tables
- Sorting variables in main window: always revert to sort by ID
  number after making changes (e.g. loading a new dataset)
- Main-window variable listing: don't always jump to line 1 after
  making changes
- When you "Save as" in the Command log window, ensure that all the 
  regular script-editing signals are properly connected (e.g. the 
  state of the Save icon responds appropriately)
- "dummify" command: add options --drop-first and --drop-last; make
  --drop-first the default when the dummify() construct is used in 
  a regression list