@@ -1,6 +1,7 @@
 version 1.6.2, in progress
 - Add Poisson distribution to p-value finder
 - Fix breakage in GUI "graph page" apparatus
+- Graph page: give color / monochrome option
 - Bivariate scatterplots: give the option of showing various sorts
   of fitted line: linear, quadratic, inverse or loess
 - Monochrome EMF graphs: make sure point types are distinct for
@@ -16,6 +17,8 @@ version 1.6.2, in progress
 - Fix memory leak when generating some sorts of matrices
 - Add option of using Parzen kernel (the default is Bartlett)
   when computing HAC covariance matrix
+- Add a toolbar to windows that display lists of files
+- Various fixes for function package editor
 - Update the API documentation (still very much incomplete)
 - Update gnuplot to version 4.2.0 in the Windows installer    
 
